<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".OverviewFragment">


    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView8"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nameText"
                    android:layout_weight="1"
            />
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/objective"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/objText"
                    android:layout_weight="1"
            />
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView1"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/titleText"
                    android:layout_weight="1"
            />
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/bachelor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bachText"
                    android:layout_weight="1"
            />
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/master"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/masText"
                    android:layout_weight="1"
            />
        </TableRow>
    </TableLayout>

</FrameLayout>