<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/enterprise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView3"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/enter"
                    android:layout_weight="1"
            />
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView2"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/date"
                    android:layout_weight="1"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView4"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/position_exp"
                    android:layout_weight="1"
            />
    </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView5"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="43dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/task"
                    android:layout_weight="1"
            />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>